--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jquery": "^3.6.1",
     "ngf-bootstrap": "^0.0.5",
     "rxjs": "~7.5.0",
+    "toastr": "^2.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
